[project]
name = "nginx-blacklist-updater"
version = "0.1.0"
description = "A tool to update Nginx blacklist files."
authors = [
    { name = "Androsh7" }
]
dependencies = [
    "requests>=2.32.5",
    "toml>=0.10.2",
]
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"